--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ root = true
 [*]
 end_of_line = lf
 charset = utf-8
+quote_type = single
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
